# URScript_AI_Generator

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/urscript_app/: config.py  main.py
src/urscript_app/api/: exception_handlers.py  routes_execute.py  routes_generate.py  routes_robot_target.py  routes_status.py  routes_validate.py
src/urscript_app/llm/: client.py  generator.py  prompts.py
src/urscript_app/robot/: rtde_client.py  rtde_pure.py  safety.py  script_sender.py  session.py
src/urscript_app/validator/: lexer.py  parser.py  result.py  semantics.py  validate.py
src/urscript_app/validator_new/: __init__.py  __main__.py  ast_nodes.py  cli.py  config_bridge.py  lexer.py  parser.py  result.py  robot_profiles.py  validate.py
src/urscript_app/validator_new/checks/: __init__.py  structure.py
src/urscript_app/web/static/: app.js  styles.css
src/urscript_app/web/templates/: index.html
tests/fixtures/urscript/: a1_move_home.urscript  a2_pick_place_bad_gripper.urscript  a2_pick_place_good.urscript  a3_force_mode_bad.urscript  a3_force_mode_good.urscript  a4_safe_loop.urscript  a5_out_of_reach.urscript  manifest.json
tests/integration/: test_endpoints.py
tests/unit/: test_safety.py  test_script_sender.py  test_validator.py  test_validator_new_parser.py  test_validator_new_scaffold.py
